--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,10 @@
 RewriteEngine on
 
 # Redirect to index.php for all requests except /assets/*
-RewriteCond %{REQUEST_URI} !^/Chat/assets/
+RewriteCond %{REQUEST_URI} !^/Hafsa_Moatassim_Billah_Alpha/assets/
 RewriteRule ^ index.php [L]
 
 # Allow direct access to assets folder
 <IfModule mod_rewrite.c>
-    RewriteRule ^Chat/assets/ - [L]
+    RewriteRule ^Hafsa_Moatassim_Billah_Alpha/assets/ - [L]
 </IfModule>
